# RAG-for-science

./: .gitignore  README.md  package-lock.json
backend/: README.md  api_server.py  backend.spec  grobid_docker.py  pipeline_runner.py  requirements.txt  run_backend_frozen.py
backend/step1_grobid/: add_paragraph_figure_refs.py  add_token_counts.py  chunk_papers.py  config.json  postprocess_grobid_json.py  process_pdfs.py  run_pipeline.py
backend/step2_figures/: README.md  crop_figures.py  extract_figures.py  run_pipeline.py
backend/step3_link_figures/: README.md  link_figures_to_chunks.py
backend/step4_embeddings/: README.md  __init__.py  config.json  embed_chunks.py  embedding_interface.py
backend/step4_embeddings/backends/: __init__.py  zhipu_embedding3.py
backend/step5_faiss/: faiss_storage.py  incremental_add.py
backend/step6_sqlite/: sqlite_storage.py
backend/step7_query/: query_pipeline.py
backend/step8_llm/: __init__.py  config.json  llm_answer.py  llm_interface.py
backend/step8_llm/backends/: __init__.py  zhipu_llm.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: AddPaperModal.jsx  ChatMessages.jsx  EvidencePanel.jsx  MessageBubble.jsx  PapersCollections.jsx  PapersView.jsx  SettingsModal.jsx  SettingsPanel.jsx  Sidebar.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
