[package]
name = "knowledgebase"
version = "0.1.0"
description = "Knowledge Base desktop app"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
anyhow = "1"
tokio = { version = "1", features = ["time", "macros"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

